# plover

./: .env  .session.vim  LICENSE  Makefile  README  STRUCTURE  TODO  configure  configure.in  notes
config/: Makefile  saga.config.c.mk.in  saga.config.check.c.mk.in  saga_base.m4
doc/: Makefile
doc/concepts/: Makefile
doc/concepts/adaptor/: .session.vim  Makefile  adaptor_test.cpp  cpi.hpp  perf.sh
doc/concepts/cpi/: .session.vim  Makefile  cpi_1.cpp  cpi_1.hpp  cpi_2.cpp  cpi_2.hpp  cpi_3.cpp  cpi_3.hpp  cpi_4.cpp  cpi_4.hpp  cpi_5.cpp  cpi_5.hpp  cpi_async_5.cpp  cpi_test.cpp  cpi_test.hpp  shared_mem_fp.cpp
doc/concepts/pimpl/: .session.vim  Makefile  (+14 more)
doc/structure/: Makefile  code_structure.hpp  subclasses.cpp
examples/: Makefile  test1.cpp
generator/: Makefile  errata.tex  generate_api.pm  generate_cpi.pm  generate_saga.pl  generator_helper.pm  generator_parser.pm  idl.dump  idl2cpp.pl  parse_idl.pl  saga_core.tex  saga_core_attributes.tex  saga_core_buffer.tex  saga_core_changelog.tex  saga_core_context.tex  saga_core_design.tex  saga_core_disclaimers.tex  saga_core_error.tex  saga_core_examples.tex  saga_core_files.tex  saga_core_functional.tex  saga_core_intro.tex  saga_core_job.tex  saga_core_logicalfiles.tex  saga_core_monitoring.tex  saga_core_namespaces.tex  saga_core_nonfunctional.tex  saga_core_object.tex  saga_core_permission.tex  saga_core_rpc.tex  saga_core_session.tex  saga_core_stream.tex  saga_core_tasks.tex  saga_core_testing.tex  saga_core_url.tex  saga_include.tex  test.tex  tex2idl.pl
make/: Makefile  README.make  saga.adaptor.mk  saga.application.mk  saga.config.default.mk  saga.config.mk  saga.error.mk  saga.external.mk  saga.install.sh.in  saga.mk  saga.mklite.mk  saga.nothing.mk  saga.package.mk  saga.test.mk  saga.util.mk  saga.warning.mk
saga/: Makefile
saga/impl/: Makefile
saga/saga/: Makefile  core.hpp  packages.hpp  saga.hpp
saga/test/: Makefile  shared_impl.cpp
saga/util/: .session.vim  Makefile  assert.cpp  assert.hpp  assign.hpp  debug.hpp  demangle.cpp  demangle.hpp  enums.cpp  enums.hpp  enums.logging.hpp  lockable.hpp  logging.cpp  logging.hpp  mutex.hpp  scoped_lock.cpp  scoped_lock.hpp  shareable.cpp  shareable.hpp  shared_counter.hpp  shared_ptr.hpp  shared_ptr_saga.hpp  shared_ptr_tr1.hpp  singleton.hpp  stack_tracer.cpp  stack_tracer.hpp  test_shared_ptr.cpp  utils.cpp  utils.hpp
(+158 files in other folders)
